--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-MONGO_URI = mongodb+srv://tamilselvan11092003_db_user:S4lLdFBuVhbxfcjm@simple-todo-mern-app.5aq6bky.mongodb.net/simple-TODO-MERN-App?retryWrites=true&w=majority&appName=simple-TODO-MERN-App
+NODE_ENV=production
+PORT=3000
+MONGO_URI=mongodb+srv://tamilselvan11092003_db_user:S4lLdFBuVhbxfcjm@simple-todo-mern-app.5aq6bky.mongodb.net/simple-TODO-MERN-App?retryWrites=true&w=majority&appName=simple-TODO-MERN-App
+
+
